# Open-Container-Engine

./: .env.development  .env.example  .env.integrate_test  .gitignore  APIs.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  ENVIRONMENT_CONFIG.md  INTEGRATION_TESTS.md  Makefile  PORT_CONFLICT_FIX.md  PROJECT_STATUS.md  README-DOCKER.md  README.md  docker-compose.test.yml  docker-compose.yml  k8sConfigTest.yaml  package-lock.json  pytest.ini  setup.sh
.github/workflows/: integration-tests.yml
.sqlx/: query-03a5a5802e51c36a16ca9bd7a87f8a28bc0c7615cb537231059018ee61bc298e.json  query-055295ddcc768b57f0919294344737ecde6dfd594903e7419594ef906477b026.json  query-0ba88a1b78cd18a82c419957c84ce56db021bab1b8551229a0c1f38be1eded0b.json  query-11d6340896362a877d965789467e2d2464a069c5ba80196daadcd7cb9971f320.json  query-19945d2e23d4e54bcaafd212df71faecd762789418a15e68cedc88ef666fec8d.json  query-1abac68b6207080fbaf6922823312d0b6e972b41627e61c4cadd1a935e121323.json  query-1eb66bd0aac43ccad4e95cd8ba9339ab8632f0b11abfe60ae6b1042b58c53398.json  query-214bdb41a8af3dc2044e1e6e65e41f7c026da529c0c97ca5c5d4099651612717.json  query-227c6ddbee82d574c1df8ac08b00572b6d58d0621d3915e0f90e04486f0b14ef.json  query-23ee8a8842f22f3cbb2fa297a57f973e662c2835a9b6be492eceb90118218dd4.json  query-2cbdf5c505a0a7d65eb01c482a4ab9378701e7d675d45e4fcb7404aba853d589.json  query-324db57df1629aedb2fccccbea66cd883f5b5a6423619041266ea8ed2a9f5d03.json  query-32aa79a0a9654fa2e3acbbd0f6ed64c6ea32b916e841115921886c0049ee8958.json  query-3303a4da1ddb7f16a00c57b6c2b7155359441ba7509b3618c0dca5dba790e06b.json  query-3502b7cabac60c2ea61a3711f1c338339c00618bed9e984248f86cd22644a2ed.json  query-38bba728896ac61542b8279a6b5a2f6740dfd3ac6b9264c5554429824338ccea.json  query-3984b7ad9086f0a2c197ffcb9bebaaa9b173b1d79686df22b11a59882753b186.json  query-3b4271cb4ae120eb8ffbdc1146ceb3a5212e7a7893f7394fc24b3b4052d82426.json  query-3c97dd5fd2911ec1ba8f34cb86cfc90d12a4fd67b623ad532b4f5f3d2de039f2.json  query-3f4d708c6810b85421669ada5f45b3a9730d85635ac5f63baa9e197895fd9005.json  query-418ecaef4e8144de092974ac916d4cd62cf1ad745507e4f266a4b63de3d52333.json  query-425b2a2f7d914511557d0550816d277624ec6d56719f7b4062a209ea9502dff4.json  query-47b7c39b7858d4fce34f6e0408ec33a0b9a25c24e306981edcc5e462397a8b9a.json  query-4e442c26827cf3829e2337446f28e2c16911bd221f5151f376aeaf32d61b6595.json  query-52903e3c64f3193ec43c87dc351cd278a8eadc7913689279e40b3743d53a396c.json  query-5889f23a18bf32671c979a8a18261ab4ca9c7170290effe5f2461cb492c03fd2.json  query-58e8b0bfe9d514bce74ca5037f8816baec7232f9ae17ff80030d256f56c91dc5.json  query-5b6879e3a8df61a893bd23d556da137694fc8a0d8fcb88b857c8216d2276081b.json  query-5d39f5b74f43ecc493890b44bb5f02f91d0abf5cede289b21d6365638b763323.json  query-6180c8cf8bae2abdc0b2ea4840909d021cc15ff6b3886700fb32a463993e3560.json  query-62706d9d0cd5746bc75cb3870fd557168e49f550d591ce6e3cf30d2c5f232b3c.json  query-6291008bd24d8a6f907e71c0040f604f96bdee291cda04d37fddff52d92e92a0.json  query-6319c10d4f5c165e2e3c5eeec8230922e2d15325d2cee9c73bd90c0be4cd3046.json  query-6498676b2a50fd55ff699dcded4c7b551e2d601eb1d99da4ad0a14fb8fa0e188.json  query-6532369d1bb53276aa07b05bf45845750aaa0a82841a897551d412febe2f0495.json  query-6fd2256f4838df3a629d064ad4cf991dfd4ebd8250f347133741faad5e547e78.json  query-74fd57201731b4ed47f9ff9c8b958347567d1ac7889066275a7b84d9e75885e1.json  query-75ff3e73dc7235391e9b026f68f59dbf3a35ec38a46a30bffe68b2eae6b28795.json  query-7912232e1b734ea8b8985b5d6372130bbd346edfb234cd4363e607965bdeb39d.json  query-796687600b707e5d6d6b1ed8470c70e6a27bc5b01c98f39263dc72075642b1d2.json  (+42 more)
apps/container-engine-frontend/: index.html  package-lock.json  package.json
migrations/: 20240101000001_initial_schema.sql  20240202000001_password_reset_tokens.sql  20240301000001_user_webhooks.sql  20240927000001_domain_ssl_management.sql
scripts/: installMinikubeScript.sh  verify-setup.sh
src/: config.rs  database.rs  error.rs  main.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  models.rs
src/deployment/: models.rs
src/email/: mod.rs  service.rs  (+1 more)
tests/: .env.test  README.md  __init__.py  conftest.py  debug_setup.py  requirements.txt  run_tests.sh
(+58 files in other folders)
