[package]
name = "container-engine"
version = "0.1.0"
edition = "2021"
description = "An open-source alternative to Google Cloud Run built with Rust & Axum"
license = "MIT"
repository = "https://github.com/ngocbd/Open-Container-Engine"

[dependencies]

# Web framework
axum = { version = "0.7", features = ["macros", "tracing"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
# Kube client
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
# Redis
redis = { version = "0.25", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Async utilities
futures = "0.3"

# HTTP client (for container registry operations)
reqwest = { version = "0.11", features = ["json"] }

# Authentication and security
bcrypt = "0.15"
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenv = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Regex
regex = "1.0"

# OpenAPI documentation
utoipa = { version = "4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }

[dev-dependencies]
tower-test = "0.4"
tempfile = "3.0"